--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model BookWeb.Models.ViewModels.ProductViewModel
 
 <form asp-action="Upsert" method="post">
     <div class="border p-3 mt-4">
@@ -7,58 +7,58 @@
             <hr />
         </div>
         <div class="mb-3">
-            <label asp-for="Title"></label>
-            <input asp-for="Title" class="form-control"/>
-            <span asp-validation-for="Title" class="text-danger"></span>
+            <label asp-for="Product.Title"></label>
+            <input asp-for="Product.Title" class="form-control"/>
+            <span asp-validation-for="Product.Title" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Description"></label>
-            <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-            <span asp-validation-for="Description" class="text-danger"></span>
+            <label asp-for="Product.Description"></label>
+            <textarea asp-for="Product.Description" class="form-control" rows="3"></textarea>
+            <span asp-validation-for="Product.Description" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="ISBN"></label>
-            <input asp-for="ISBN" class="form-control"/>
-            <span asp-validation-for="ISBN" class="text-danger"></span>
+            <label asp-for="Product.ISBN"></label>
+            <input asp-for="Product.ISBN" class="form-control"/>
+            <span asp-validation-for="Product.ISBN" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Author"></label>
-            <input asp-for="Author" class="form-control"/>
-            <span asp-validation-for="Author" class="text-danger"></span>
+            <label asp-for="Product.Author"></label>
+            <input asp-for="Product.Author" class="form-control"/>
+            <span asp-validation-for="Product.Author" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="ListPrice"></label>
-            <input asp-for="ListPrice" class="form-control"/>
-            <span asp-validation-for="ListPrice" class="text-danger"></span>
+            <label asp-for="Product.ListPrice"></label>
+            <input asp-for="Product.ListPrice" class="form-control"/>
+            <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Price"></label>
-            <input asp-for="Price" class="form-control"/>
-            <span asp-validation-for="Price" class="text-danger"></span>
+            <label asp-for="Product.Price"></label>
+            <input asp-for="Product.Price" class="form-control"/>
+            <span asp-validation-for="Product.Price" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Price50"></label>
-            <input asp-for="Price50" class="form-control"/>
-            <span asp-validation-for="Price50" class="text-danger"></span>
+            <label asp-for="Product.Price50"></label>
+            <input asp-for="Product.Price50" class="form-control"/>
+            <span asp-validation-for="Product.Price50" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Price100"></label>
-            <input asp-for="Price100" class="form-control"/>
-            <span asp-validation-for="Price100" class="text-danger"></span>
+            <label asp-for="Product.Price100"></label>
+            <input asp-for="Product.Price100" class="form-control"/>
+            <span asp-validation-for="Product.Price100" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="CategoryID"></label>
-            <select asp-for="CategoryID" asp-items="ViewBag.CategoryList" class="form-select">
+            <label asp-for="Product.CategoryID"></label>
+            <select asp-for="Product.CategoryID" asp-items="@Model.CategoryList" class="form-select">
                 <option disabled selected>--Select Category--</option>
             </select>
-            <span asp-validation-for="CategoryID" class="text-danger"></span>
+            <span asp-validation-for="Product.CategoryID" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="CoverTypeID"></label>
-            <select asp-for="CoverTypeID" asp-items="@(ViewData["CoverTypeList"] as IEnumerable<SelectListItem>)" class="form-select">
+            <label asp-for="Product.CoverTypeID"></label>
+            <select asp-for="Product.CoverTypeID" asp-items="@Model.CoverTypeList" class="form-select">
                 <option disabled selected>--Select Category--</option>
             </select>
-            <span asp-validation-for="CoverTypeID" class="text-danger"></span>
+            <span asp-validation-for="Product.CoverTypeID" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary" style="width: 180px">Create</button>
         <a asp-controller="Product" asp-action="Index" class="btn btn-warning" style="width:180px">Back to list</a> 
