--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,9 +1,10 @@
 ﻿@model BookWeb.Models.ViewModels.ProductViewModel
 
-<form asp-action="Upsert" method="post">
-    <div class="border p-3 mt-4">
+                                      @*enctype is for image uploading*@
+<form asp-action="Upsert" method="post" enctype="multipart/form-data">
+    <div class="border p-3 mt-4 row">
         <div class="row pb-2">
-            <h2 class="text-primary">Edit Product</h2>
+            <h2 class="text-primary">@(Model.Product.Id != 0? "Update":"Create") Product</h2>
             <hr />
         </div>
         <div class="mb-3">
@@ -16,52 +17,65 @@
             <textarea asp-for="Product.Description" class="form-control" rows="3"></textarea>
             <span asp-validation-for="Product.Description" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-6">
             <label asp-for="Product.ISBN"></label>
             <input asp-for="Product.ISBN" class="form-control"/>
             <span asp-validation-for="Product.ISBN" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-6">
             <label asp-for="Product.Author"></label>
             <input asp-for="Product.Author" class="form-control"/>
             <span asp-validation-for="Product.Author" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-6">
             <label asp-for="Product.ListPrice"></label>
             <input asp-for="Product.ListPrice" class="form-control"/>
             <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-6">
             <label asp-for="Product.Price"></label>
             <input asp-for="Product.Price" class="form-control"/>
             <span asp-validation-for="Product.Price" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-6">
             <label asp-for="Product.Price50"></label>
             <input asp-for="Product.Price50" class="form-control"/>
             <span asp-validation-for="Product.Price50" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-6">
             <label asp-for="Product.Price100"></label>
             <input asp-for="Product.Price100" class="form-control"/>
             <span asp-validation-for="Product.Price100" class="text-danger"></span>
         </div>
         <div class="mb-3">
+            <label asp-for="Product.ImageURL"></label>
+            <input type="file" id="uploadBox" class="form-control"/> 
+
+        </div>
+        <div class="mb-3 col-6">
             <label asp-for="Product.CategoryID"></label>
             <select asp-for="Product.CategoryID" asp-items="@Model.CategoryList" class="form-select">
                 <option disabled selected>--Select Category--</option>
             </select>
             <span asp-validation-for="Product.CategoryID" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-6">
             <label asp-for="Product.CoverTypeID"></label>
             <select asp-for="Product.CoverTypeID" asp-items="@Model.CoverTypeList" class="form-select">
                 <option disabled selected>--Select Category--</option>
             </select>
             <span asp-validation-for="Product.CoverTypeID" class="text-danger"></span>
+        </div> 
+        <div class="col-12">
+            @if(Model.Product.Id == 0)
+            {
+                <button type="submit" class="btn btn-primary" onclick="return ValidateInput()" style="width: 180px">Create</button>
+            }else
+            {
+                <button type="submit" class="btn btn-primary" style="width: 180px">Update</button>
+            }
+            <a asp-controller="Product" asp-action="Index" class="btn btn-warning" style="width:180px">Back to list</a> 
         </div>
-        <button type="submit" class="btn btn-primary" style="width: 180px">Create</button>
-        <a asp-controller="Product" asp-action="Index" class="btn btn-warning" style="width:180px">Back to list</a> 
     </div>
 </form>
 
@@ -69,4 +83,17 @@
     @{
         <partial name="_ValidationScriptsPartial" />
     }
+    <script>
+        function ValidateInput(){
+            if(document.getElementById("uploadBox").value==""){
+                  Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please, upload an Image!',
+                  });
+                  return false;
+            }
+            return true;
+        }
+    </script>
 }
