Work with Edit and Create (that is Upsert) is finished

--- a/BookWeb/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/BookWeb/Areas/Admin/Views/CoverType/Index.cshtml
@@ -32,12 +32,12 @@
                         @obj.Name 
                     </td>
                     <td>
-                        <div class="w-75 btn-group" role="group">
+                        <div class="w-75 btn-group" role="group" style="padding: 16px">
                             <a asp-controller="CoverType" asp-action="Edit" asp-route-id=@obj.Id class="btn btn-outline-info"><i class="bi bi-pencil-square"></i>Edit</a>
                         </div>
                     </td>
                     <td>
-                        <div class="w-75 btn-group" role="group">
+                        <div class="w-75 btn-group" role="group"style="padding: 16px">
                             <a asp-controller="CoverType" asp-action="Delete" asp-route-id=@obj.Id class="btn btn-outline-danger"><i class="bi bi-trash-fill"></i>Delete</a>
                         </div>
                     </td>
