--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -2,6 +2,9 @@
 
                                       @*enctype is for image uploading*@
 <form asp-action="Upsert" method="post" enctype="multipart/form-data">
+    
+    <input asp-for="Product.Id" hidden />
+    <input asp-for="Product.ImageURL" hidden />
     <div class="border p-3 mt-4 row">
         <div class="row pb-2">
             <h2 class="text-primary">@(Model.Product.Id != 0? "Update":"Create") Product</h2>
