--- a/BookWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -11,7 +11,7 @@
     <br />
     <br />
 
-    <table class = "table table-bordered table-striped" style="width:100%">
+    <table class = "table table-bordered table-striped" id="tblData" style="width:100%">
         <thead>
             <tr>
                 <th>
@@ -29,8 +29,13 @@
                 <th>
                     Category
                 </th>
+                <th></th>
             </tr>
         </thead>
     </table>
 
 </div>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
