--- a/BookWeb/Views/Shared/_Layout.cshtml
+++ b/BookWeb/Views/Shared/_Layout.cshtml
@@ -61,6 +61,9 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="//cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"> </script>
+    
+    @*<script src="https://cdn.tiny.cloud/1/nziufiudlks4h7qe6kbq7g6y787m84lhq2p4ll91656i1nh9/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>*@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
